--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p>pentingnya pengelolaan sampah di lingkungan sekolah.</p>
             </div>
             <div>
-                <a href="https://www.canva.com/design/DAGYMnKQtdc/5D-JEW6zA-NFi_iaO0Zvfw/edit">INFOGRAFIS</a>
+                <a href="https://i.ibb.co.com/XDd1kYF/poster.jpg">INFOGRAFIS</a>
                 <a href="https://docs.google.com/document/d/10OzqXDrupNBAtZDeE42oZwve89CYPrHOu_Fs7KtIC64/edit?tab=t.0">RESUME</a>
             </div>
         </div>
